--- a/Login.html
+++ b/Login.html
@@ -115,7 +115,7 @@ input[type=submit]:hover {
     <!-- ####################################################################################################### -->
     <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: black; font-size: small;padding-bottom: 10px;padding-top: 0px;">
       Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering<br>
-      Questions or comments regarding Canvas? Send e-mail to the course Staffs or TAs.
+      Questions or comments regarding us? Send e-mail to the course Staffs or TAs.
     </div>
   </div>
 </div>
