--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </h2>
           <ul>
             <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/%E7%97%85%E7%90%86%E5%AD%A6%E4%B8%8E%E7%97%85%E7%90%86%E7%94%9F%E7%90%86%E5%AD%A6%E6%80%BB%E8%AE%BA" style="color: black;text-decoration: none;" target="_blank" >病理学与病理生理学总论资料</a></li>
-
+            <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/%E5%8C%BB%E5%AD%A6%E8%8B%B1%E8%AF%AD" style="color: black;text-decoration: none;" target="_blank" >医学英语期末复习学案</a></li>
           </ul>
           <div style="text-align: right;font-size: small;"><a href="https://gitee.com/Jinhang_Qiu/Download" target="_blank">more</a></div>
         </div>
@@ -188,7 +188,7 @@
   <hr>
   <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: black; font-size: small;padding-bottom: 10px;padding-top: 0px;">
   Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering
-
+    
   </div>
 </footer>
 
