--- a/index/timetable.html
+++ b/index/timetable.html
@@ -260,13 +260,16 @@
              2023 - Computer Science and Medical Interdisciplinary Engineering
           </td>
           <td  width="50%" valign="middle" style="word-break: break-all;" align="right">
-            <img src="image/CST Med.png" alt="Newterm" width="430" height="66">
+            <a href="https://computersciencekaoyan.github.io/" style="color: black;text-decoration: none;">
+              <img src="image/CST Med.png" alt="Newterm" width="430" height="66">
+            </a>
           </td>
         </tr>
       </tbody>
     </table>
     <br>
   </div>
+
 
 
 
