--- a/Canvas/Homepage/CS2309.html
+++ b/Canvas/Homepage/CS2309.html
@@ -188,21 +188,21 @@
 
 									<tbody style="background-color:lightyellow;">
 										
-										<tr>
+										<tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3.4</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论2-类和对象基础</div></td>
 											<td width="30%"><div align="center">Lab 1</div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
-										<tr>
+										<tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3.5</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论3-类和对象提高</div></td>
 											<td width="30%"><div align="center">Lab 1</div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
-										<tr>
+										<tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3.9</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论4-运算符重载</div></td>
 											<td width="30%"><div align="center">Lab 1</div></td>
