--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -220,13 +220,13 @@
 
 										<tr>
 											<td width="10%"><div align="center">3/12</div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;">树状结构2</div></td>
-											<td width="30%"><div align="center">After Class Reading /
-												<a href="https://pintia.cn/problem-sets/988034414048743424/exam/problems/type/7" target="_blank" style="text-decoration:none;color: blue;">
-													Lab
+											<td width="30%"><div align="left" style="padding-left: 15px;">树状结构2 (5.5.1-5.5.3)</div></td>
+											<td width="30%"><div align="center">
+												<a href="https://e.leetcode.cn/enterprise/xpupylgbuylq/questions-set/package/dc1fe996-f5ed-42de-a0d3-3c02cc271535" target="_blank" style="text-decoration:none;color: red;font-weight: bold;">
+													第一次小作业 (2023-03-12~2023-03-19)
 												</a>
 											</div></td>
-											<td width="30%"><div align="center">5.5.1-5.5.3</div></td>	
+											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
 										<tr>
