--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -224,6 +224,9 @@
 											<td width="30%"><div align="center">
 												<a href="https://e.leetcode.cn/assessment/xpupylgbuylq-0001" target="_blank" style="text-decoration:none;color: red;font-weight: bold;">
 													第一次小作业 (2023-03-12~2023-03-19)
+												</a> / 
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/tree/master/CS0501%20Advanced%20Data%20Structure/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%B0%8F%E4%BD%9C%E4%B8%9A%E4%BB%A3%E7%A0%81%E6%8F%90%E4%BA%A4/%E7%AC%AC%E4%B8%80%E6%AC%A1%E5%B0%8F%E4%BD%9C%E4%B8%9A" target="_blank" style="text-decoration:none;color: blue;font-weight: bold;">
+													作业记录提交
 												</a>
 											</div></td>
 											<td width="30%"><div align="center"></div></td>	
