--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -218,7 +218,7 @@
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
-										<tr>
+										<tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3/12</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">树状结构2 (5.5.1-5.5.3)</div></td>
 											<td width="30%"><div align="center">
