--- a/Canvas/Homepage/CS2309.html
+++ b/Canvas/Homepage/CS2309.html
@@ -218,7 +218,11 @@
                                         <tr>
 											<td width="10%"><div align="center">3.15</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论6-多态</div></td>
-											<td width="30%"><div align="center">Lab 1</div></td>
+											<td width="30%"><div align="center">
+												<a href="https://e.leetcode.cn/assessment/xpupylgbuylq-0002/login/0449efae-7de5-4090-a754-eccbd9e33c40" target="_blank" style="text-decoration:none;color: red;font-weight: bold;">
+													第一次小作业 (2023-03-12~2023-03-19)
+												</a>
+											</div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
