--- a/Canvas/Homepage/MATH1205.html
+++ b/Canvas/Homepage/MATH1205.html
@@ -264,7 +264,7 @@
                                             <td></td>
                                             </tr>
 
-                                            <tr >
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.12</td>
                                             <td>可逆矩阵、分块矩阵1</td>
                                             <td>3</td>
@@ -272,7 +272,7 @@
                                             <td>习题课</td>
                                             </tr>
 
-                                            <tr >
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.13</td>
                                             <td>逆矩阵、秩的概念</td>
                                             <td>3</td>
@@ -280,7 +280,7 @@
                                             <td>习题课</td>
                                             </tr>
 
-                                            <tr >
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.14</td>
                                             <td>3.1-3.2</td>
                                             <td>3</td>
