--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -330,6 +330,7 @@
 							<hr>
 
 							<h4>Lab1 Vector:<a href="https://github.com/ACMClassCourse-2022/STLite_Honor">Link</a><div style="color: red;font-weight: bold;">已发布</div></h4>
+							&ensp;&ensp;&ensp;&ensp;<a href="https://e.leetcode.cn/enterprise/xpupylgbuylq/questions-set/package/83842b70-f891-4141-9a86-cb7a9c904f65" target="_blank">基础作业(C班)</a>
 							<div style="background-color: #DDF8FF;">2023-03-05（第 3 周周日）~ 2023-03-19（第 5 周周日）</div>
 							<b>Reference</b><br>
 							<a href="https://doc.qt.io/qt-5/qlist-iterator.html#operator-eq-eq-1">iterator Class-class QList::iterator</a>
