--- a/Canvas/Homepage/0x00.studentenquiry.html
+++ b/Canvas/Homepage/0x00.studentenquiry.html
@@ -106,91 +106,91 @@
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;text-align: center;" rowspan="2">通识类课程</td>
                                     <td style="padding-left: 3px;">公共课程类</td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     
                                     <td style="padding-left: 3px;">英语公共课程类</td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;text-align: center;" rowspan="5">专业教育课程</td>
                                     <td style="padding-left: 3px;">电子信息类专业必修（一）</td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;">电子信息类专业必修（二）</td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;">数学类专业必修</td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;">医学类专业必修（一）</td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;">医学类专业必修（二）</td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;text-align: center;" rowspan="4">专业实践类课程</td>
                                     <td style="padding-left: 3px;">医学实验课程</td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;">电子信息类</td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;">医学毕业实习</td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;">专业综合训练</td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color: #CCEED0">
                                     <td style="padding-left: 3px;text-align: center;">英语水平考</td>
                                     <td style="padding-left: 3px;"></td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;">√</td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;text-align: center;">毕业综合考试</td>
                                     <td style="padding-left: 3px;"></td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
                                 <tr style="background-color:lightyellow">
                                     <td style="padding-left: 3px;text-align: center;">英语等级考试</td>
                                     <td style="padding-left: 3px;"></td>
-                                    <td style="padding-left: 3px;"></td>
+                                    <td style="padding-left: 3px;text-align: center;"></td>
                                     <td style="padding-left: 3px;"></td>
                                     <td style="padding-left: 3px;"></td>
                                 </tr>
@@ -259,7 +259,7 @@
                                             <td width="4%"><div align="center">二</div></td>
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
-                                            <td width="5%"><div align="center">PASS</div></td>
+                                            <td width="5%"><div align="center">PA</div></td>
                                             <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center">医学院</div></td>
                                         </tr>
@@ -326,7 +326,7 @@
                                             <td width="4%"><div align="center">二</div></td>
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
-                                            <td width="5%"><div align="center">P</div></td>
+                                            <td width="5%"><div align="center">PA</div></td>
                                             <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center">2022-9-CET4</div></td>
                                         </tr>
@@ -444,7 +444,7 @@
                                             <td colspan="12"><div align="left" style="font-size: large;font-weight: lighter;padding-left: 20px;">
                                                 大学英语六级考试(CET-6)
                                                 认定方式：当前大学英语六级考试（CET6）成绩≤620者
-                                                    成绩认定以最后一次大学英语六级考试成绩为准，高于620分者，该课程即为“PASS”
+                                                    成绩认定以最后一次大学英语六级考试成绩为准，高于620分者，该课程即为“PA”
                                             </div></td>
                                         </tr>
                                     </tbody>
@@ -481,7 +481,7 @@
                                             <td width="4%"><div align="center">一</div></td>
                                             <td width="5%"><div align="center">3</div></td>
                                             <td width="10%"><div align="center">限选</div></td>
-                                            <td width="5%"><div align="center">PASS</div></td>
+                                            <td width="5%"><div align="center">PA</div></td>
                                             <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
@@ -555,7 +555,7 @@
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
                                             <td width="5%"><div align="center">PA</div></td>
-                                            <td width="10%"><div align="center"></div></td>
+                                            <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
                                         <tr style="background-color:lightpink">
@@ -703,7 +703,7 @@
                                             <td width="4%"><div align="center">二</div></td>
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
-                                            <td width="5%"><div align="center">PASS</div></td>
+                                            <td width="5%"><div align="center">PA</div></td>
                                             <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
@@ -717,7 +717,7 @@
                                             <td width="4%"><div align="center">二</div></td>
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
-                                            <td width="5%"><div align="center">PASS</div></td>
+                                            <td width="5%"><div align="center">PA</div></td>
                                             <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
@@ -731,7 +731,7 @@
                                             <td width="4%"><div align="center">二</div></td>
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
-                                            <td width="5%"><div align="center">PASS</div></td>
+                                            <td width="5%"><div align="center">PA</div></td>
                                             <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
@@ -745,7 +745,7 @@
                                             <td width="4%"><div align="center">二</div></td>
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
-                                            <td width="5%"><div align="center">PASS</div></td>
+                                            <td width="5%"><div align="center">PA</div></td>
                                             <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
@@ -759,7 +759,7 @@
                                             <td width="4%"><div align="center">二</div></td>
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
-                                            <td width="5%"><div align="center">PASS</div></td>
+                                            <td width="5%"><div align="center">PA</div></td>
                                             <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
@@ -774,7 +774,7 @@
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
                                             <td width="5%"><div align="center">PA</div></td>
-                                            <td width="10%"><div align="center">在修</div></td>
+                                            <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
                                         <tr style="background-color:white">
@@ -1010,7 +1010,7 @@
                                             <td width="4%"><div align="center">二</div></td>
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
-                                            <td width="5%"><div align="center">PASS</div></td>
+                                            <td width="5%"><div align="center">PA</div></td>
                                             <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
@@ -1053,7 +1053,7 @@
                                             <td width="4%"><div align="center">二</div></td>
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
-                                            <td width="5%"><div align="center">PASS</div></td>
+                                            <td width="5%"><div align="center">PA</div></td>
                                             <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
@@ -1243,7 +1243,7 @@
                                             <td width="4%"><div align="center">二</div></td>
                                             <td width="5%"><div align="center">1</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
-                                            <td width="5%"><div align="center">PASS</div></td>
+                                            <td width="5%"><div align="center">PA</div></td>
                                             <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
@@ -1357,7 +1357,7 @@
                                             <td width="5%"><div align="center">冬季学期</div></td>
                                             <td width="10%"><div align="center">必修</div></td>
                                             <td width="5%"><div align="center">PA</div></td>
-                                            <td width="10%"><div align="center"></div></td>
+                                            <td width="10%"><div align="center">√</div></td>
                                             <td width="10%"><div align="center"></div></td>
                                         </tr>
                                         <tr style="background-color:white">
