--- a/Canvas/Homepage/CS2309.html
+++ b/Canvas/Homepage/CS2309.html
@@ -227,14 +227,14 @@
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
-                                        <tr>
+                                        <tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3.17</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论7-输入输出和模板</div></td>
 											<td width="30%"><div align="center">Lab 1</div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
-                                        <tr>
+                                        <tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3.23</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论8-标准模板库STL(一)</div></td>
 											<td width="30%"><div align="center">Lab 1</div></td>
