--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -265,7 +265,7 @@
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
-										<tr>
+										<tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3/26</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">Chapter 7: 7.3-7.4</div></td>
 											<td width="30%"><div align="center">After Class Reading /
