--- a/Online Course/Homepage/Model.html
+++ b/Online Course/Homepage/Model.html
@@ -148,7 +148,7 @@
 											<li class="link-list-item">
 												<div class="layui-row">
 													<div class="layui-col-xs1">
-													  	<div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
+													  	<div class="grid-demo grid-demo-bg1"><img src="image/main-content-element/link-three_black.png" class="link-list-img"></div>
 													</div>
 													<div class="layui-col-xs11">
 													  	<div class="grid-demo"><a href="#">Lecture Videos</a></div>
@@ -159,7 +159,7 @@
 											<li class="link-list-item">
 												<div class="layui-row">
 													<div class="layui-col-xs1">
-													  	<div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
+													  	<div class="grid-demo grid-demo-bg1"><img src="image/main-content-element/link-three_black.png" class="link-list-img"></div>
 													</div>
 													<div class="layui-col-xs11">
 													  	<div class="grid-demo"><a href="#">Resource</a></div>
@@ -170,7 +170,7 @@
 											<li class="link-list-item">
 												<div class="layui-row">
 													<div class="layui-col-xs1">
-													  	<div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
+													  	<div class="grid-demo grid-demo-bg1"><img src="image/main-content-element/link-three_black.png" class="link-list-img"></div>
 													</div>
 													<div class="layui-col-xs11">
 													  	<div class="grid-demo"><a href="#">Resource</a></div>
@@ -208,14 +208,14 @@
 								<div class="main-title" id="Modules">Modules</div>
 								<div class="layui-collapse">
 									<div class="layui-colla-item">
-									  	<div class="layui-colla-title">Chapter 1</div>
-									  	<div class="layui-colla-content">
+									  	<div class="layui-colla-title colla-title">Chapter 1</div>
+									  	<div class="layui-colla-content bg-gray">
 											<!--Filelist-->
 											<ul class="file-list">
 												<li class="file-list-item">
 													<div class="layui-row">
 														<div class="layui-col-xs1">
-															<div class="grid-demo grid-demo-bg1"><img src="image/链接_link.png" class="link-list-img"></div>
+															<div class="grid-demo grid-demo-bg1"><img src="image/main-content-element/link.png" class="link-list-img"></div>
 														</div>
 														<div class="layui-col-xs11">
 															<div class="grid-demo"><a href="#">File</a></div>
@@ -225,7 +225,7 @@
 												<li class="file-list-item">
 													<div class="layui-row">
 														<div class="layui-col-xs1">
-															<div class="grid-demo grid-demo-bg1"><img src="image/链接_link.png" class="link-list-img"></div>
+															<div class="grid-demo grid-demo-bg1"><img src="image/main-content-element/link.png" class="link-list-img"></div>
 														</div>
 														<div class="layui-col-xs11">
 															<div class="grid-demo"><a href="#">File</a></div>
@@ -237,12 +237,61 @@
 										</div>
 									</div>
 									<div class="layui-colla-item">
-										<div class="layui-colla-title">Chapter 2</div>
-										<div class="layui-colla-content">
-											<ul>
-												<li>Content list</li>
-												<li>Content list</li>
+										<div class="layui-colla-title colla-title">Chapter 2</div>
+										<div class="layui-colla-content bg-gray">
+											<!--Linklist-ver2-->
+											<ul class="file-list">
+												<li class="file-list-item">
+													<div class="layui-row">
+														<div class="layui-col-xs1">
+															<div class="grid-demo grid-demo-bg1"><img src="image/main-content-element/link-three_green.png" class="link-list-img"></div>
+														</div>
+														<div class="layui-col-xs11">
+															<div class="grid-demo"><a href="#">Link</a></div>
+														</div>
+													</div>
+												</li>
+												<li class="file-list-item">
+													<div class="layui-row">
+														<div class="layui-col-xs1">
+															<div class="grid-demo grid-demo-bg1"><img src="image/main-content-element/link-three_green.png" class="link-list-img"></div>
+														</div>
+														<div class="layui-col-xs11">
+															<div class="grid-demo"><a href="#">Link</a></div>
+														</div>
+													</div>
+												</li>
 											</ul>
+											<!--Linklist-ver2-->
+										</div>
+									</div>
+									<div class="layui-colla-item">
+										<div class="layui-colla-title colla-title">Chapter 3</div>
+										<div class="layui-colla-content bg-gray">
+											<!--Linklist-ver2-->
+											<ul class="file-list">
+												<li class="file-list-item">
+													<div class="layui-row">
+														<div class="layui-col-xs1">
+															<div class="grid-demo grid-demo-bg1"><img src="image/main-content-element/file-homework.png" class="link-list-img"></div>
+														</div>
+														<div class="layui-col-xs11">
+															<div class="grid-demo"><a href="#">Homework</a></div>
+														</div>
+													</div>
+												</li>
+												<li class="file-list-item">
+													<div class="layui-row">
+														<div class="layui-col-xs1">
+															<div class="grid-demo grid-demo-bg1"><img src="image/main-content-element/file-code.png" class="link-list-img"></div>
+														</div>
+														<div class="layui-col-xs11">
+															<div class="grid-demo"><a href="#">CodeFile</a></div>
+														</div>
+													</div>
+												</li>
+											</ul>
+											<!--Linklist-ver2-->
 										</div>
 									</div>
 								</div>
@@ -281,6 +330,14 @@
 										</div>
 									</div>
 								</div>
+
+								<div class="layui-card  outer-reference-ver2">
+									<div class="layui-card-header outer-reference-ver2-header"><div class="outer-reference-ver2-title">Refer to outer website_ver2</div></div>
+									<div class="layui-card-body">
+									  	<iframe src="#" class="refer-out-web" ></iframe>
+									</div>
+								</div>
+								
 								<!--Resources-->
 								</div>
 			  				<!--content-->
@@ -294,7 +351,7 @@
 								<li class="btn">
 									<div class="layui-row">
 										<div class="layui-col-xs3">
-											<div class="grid-demo grid-demo-bg1"><img src="image/趋势_trend-two.png" class="btn-img"></div>
+											<div class="grid-demo grid-demo-bg1"><img src="image/main-content-element/trend.png" class="btn-img"></div>
 										</div>
 										<div class="layui-col-xs9">
 											<div class="grid-demo"><a href="https://computersciencekaoyan.github.io/Online%20Course/Grades.html">View Course Grades</a></div>
